Ananido 2do div

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 <body>
     <div><img src="img/Git-Icon.png"></div>
     <h1>Blog curso Git</h1>
+    <div>
+        Aqui ira el contenido del blog
+    </div>
 </body>
 </html>
