--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Blog Curso Git</title>
 </head>
 <body>
-    <div><img src="img/Git-Icon.png"></div>
+    <div><img src="img/Git-Icon-1788C.png"></div>
     <h1>Blog curso Git</h1>
     <div>
         Aqui ira el contenido del blog
