--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <title>Blog Curso Git</title>
 </head>
 <body>
-    <div><img src="img/Git-Icon-1788C.png"></div>
-    <h1>Blog curso Git</h1>
+    <div class="bar">
+        <img class="logo" src="img/Git-Icon-1788C.png">
+        <h1>Blog curso Git</h1>
+    </div>
     <div>
         Aqui ira el contenido del blog
     </div>
