--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="bar">
         <img class="logo" src="img/Git-Icon-1788C.png">
-        <h1>Blog curso Git</h1>
+        <h1>Blog curso Git & Github</h1>
     </div>
     <div>
         Aqui ira el contenido del blog
